# TimeSeriesSurfers

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: first_try.ipynb
src/Coaches/: base.py
src/DataProcessors/: base.py
src/DataStreamer/: base.py
src/DataStreamers/: base.py
src/Evaluators/: base.py
src/Logger/: base.py
src/Loggers/: base.py
src/Memory/: base.py
src/Models/: base.py
src/Pipeline/: base.py
src/Pipelines/: base.py
src/Trainers/: base.py
src/Triggers/: base.py
src/scripts/: run_pipeline.py
src/utils/: plotting.py
